Fixing project name size on mobile

--- a/css/healthmate.css
+++ b/css/healthmate.css
@@ -126,7 +126,7 @@ hr {
 /* Mobile portrait */
 @media (min-width:320px) and (max-width:480px){
     #nav-container #name {font-size: 1.75em;}
-    #proj-name {font-size: 2.0em;}
+    #proj-name {font-size: 2.2em;}
     #to-top #right-hr hr {margin-top: 20px;}
     .bot-images {margin-top: 20px;}
     .right-images {margin-top: 20px;}
